# vmc

./: .gitignore  .merlin  Makefile  c.ml  dune  dune-project  jbuild  myBatteries.ml  parsers.ml  unit_tests.ml  vmc.ml
tests/: array.c  array.c.expected  dune  empty.c.expected  jbuild  test.ml
