; https://github.com/ocaml/dune/tree/master/example/sample-projects/hello_world
(executable
 (name vmc)
 (public_name vmc)
 (libraries batteries angstrom)
 (preprocess
  (pps ppx_deriving.std))
 ; ppx_deriving_morphism only works with ocamlbuild
 )

; https://dune.readthedocs.io/en/stable/faq.html#how-to-make-warnings-non-fatal
(env
  (dev
    (flags (:standard -warn-error -A))))
