; https://dune.readthedocs.io/en/stable/dune-files.html#rule
; Note that contrary to makefiles or other build systems, user rules currently don’t support patterns, such as a rule to produce %.y from %.x for any given %. This might be supported in the future.

(rule
 (targets empty.c.output)
 (deps
  (:< empty.c))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:vmc} %{<}))))

(rule
 (targets array.c.output)
 (deps
  (:< array.c))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:vmc} %{<}))))

(alias
 (name runtest)
 (action
  (progn
    (diff %{dep:empty.c.expected} %{dep:empty.c.output})
    (diff %{dep:array.c.expected} %{dep:array.c.output}))))
