; https://dune.readthedocs.io/en/stable/dune-files.html#rule
; Note that contrary to makefiles or other build systems, user rules currently don’t support patterns, such as a rule to produce %.y from %.x for any given %. This might be supported in the future.

(rule (with-stdout-to empty.c.output (run %{bin:vmc} %{dep:empty.c})))
(rule (with-stdout-to array.c.output (run %{bin:vmc} %{dep:array.c})))

(alias
 (name runtest)
 (action (progn
   (diff empty.c.expected empty.c.output)
   (diff array.c.expected array.c.output)
 )))
